; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_amrwbdec.c_noise_enhancer.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_amrwbdec.c_noise_enhancer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float*, float, float)* @noise_enhancer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @noise_enhancer(float %0, float* %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float*, align 8
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store float %0, float* %5, align 4
  store float* %1, float** %6, align 8
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %11 = load float, float* %7, align 4
  %12 = fsub float 1.000000e+00, %11
  %13 = fpext float %12 to double
  %14 = fmul double 5.000000e-01, %13
  %15 = load float, float* %8, align 4
  %16 = fpext float %15 to double
  %17 = fmul double %14, %16
  %18 = fptrunc double %17 to float
  store float %18, float* %9, align 4
  %19 = load float, float* %5, align 4
  %20 = load float*, float** %6, align 8
  %21 = load float, float* %20, align 4
  %22 = fcmp olt float %19, %21
  br i1 %22, label %23, label %31

23:                                               ; preds = %4
  %24 = load float*, float** %6, align 8
  %25 = load float, float* %24, align 4
  %26 = load float, float* %5, align 4
  %27 = load float, float* %5, align 4
  %28 = fmul float %27, 0x3FC8520000000000
  %29 = fadd float %26, %28
  %30 = call float @FFMIN(float %25, float %29)
  store float %30, float* %10, align 4
  br label %37

31:                                               ; preds = %4
  %32 = load float*, float** %6, align 8
  %33 = load float, float* %32, align 4
  %34 = load float, float* %5, align 4
  %35 = fmul float %34, 0x3FEAE40000000000
  %36 = call float @FFMAX(float %33, float %35)
  store float %36, float* %10, align 4
  br label %37

37:                                               ; preds = %31, %23
  %38 = load float, float* %10, align 4
  %39 = load float*, float** %6, align 8
  store float %38, float* %39, align 4
  %40 = load float, float* %9, align 4
  %41 = load float, float* %10, align 4
  %42 = fmul float %40, %41
  %43 = load float, float* %9, align 4
  %44 = fsub float 1.000000e+00, %43
  %45 = load float, float* %5, align 4
  %46 = fmul float %44, %45
  %47 = fadd float %42, %46
  ret float %47
}

declare dso_local float @FFMIN(float, float) #1

declare dso_local float @FFMAX(float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
